Fix Footer Centering, Remove Scrollbar, and Equal Spacing

--- a/Partners-Portal/src/app/components/payment-request/new-payment-request/new-payment-request.component.scss
+++ b/Partners-Portal/src/app/components/payment-request/new-payment-request/new-payment-request.component.scss
@@ -19,10 +19,11 @@
 
 .new-payment-request-content {
   flex: 1;
-  padding: 30px;
+  padding: 0 30px 30px 30px;
   position: relative;
   margin-top: -100px;
   z-index: 10;
+  overflow-x: hidden;
 }
 
 .new-payment-request-section {
