--- a/Partners-Portal/src/app/components/payment-request/payment-request.component.scss
+++ b/Partners-Portal/src/app/components/payment-request/payment-request.component.scss
@@ -7,6 +7,7 @@
   background: #F5F8FC;
   padding: 0;
   width: 100%;
+  overflow-x: hidden;
 }
 
 .main-content {
@@ -16,14 +17,16 @@
   flex-direction: column;
   min-height: 100vh;
   transition: margin-left 0.3s ease;
+  overflow-x: hidden;
 }
 
 .payment-request-content {
   flex: 1;
-  padding: 30px;
+  padding: 0 30px 30px 30px;
   position: relative;
   margin-top: -100px;
   z-index: 10;
+  overflow-x: hidden;
 }
 
 .card-header {
