--- a/Partners-Portal/src/app/components/shared/footer/footer.component.scss
+++ b/Partners-Portal/src/app/components/shared/footer/footer.component.scss
@@ -17,11 +17,12 @@
 .footer-text {
   font-size: 14px;
   color: $white;
-  display: inline-block;
-  padding-left: 280px;
+  display: block;
+  padding: 0;
   font-family: 'Poppins', sans-serif;
   width: 100%;
   text-align: center;
+  margin: 0 auto;
 }
 
 .footer-link {
