--- a/Partners-Portal/src/app/components/shared/header/header.component.scss
+++ b/Partners-Portal/src/app/components/shared/header/header.component.scss
@@ -7,7 +7,7 @@
   padding: 20px 30px;
   color: $white;
   border-radius: 20px;
-  margin: 20px;
+  margin: 20px 30px;
   overflow: hidden;
   min-height: 100px;
 }
