--- a/Partners-Portal/src/styles.scss
+++ b/Partners-Portal/src/styles.scss
@@ -18,4 +18,6 @@ body {
   font-family: 'Poppins', Arial, sans-serif;
   background: $primary-bg;
   color: $text-dark;
+  margin: 0;
+  padding: 0;
 }
